# HW_12_WEB

./: db.py  main.py  pyproject.toml  run_server.py
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/repostory/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py
